--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -13,4 +13,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: jidicula/clang-format-action@v4.11.0
         with:
+          clang-format-version: '14'
           check-path: ${{ matrix.path }}
