--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ on: [push, workflow_dispatch]
 
 jobs:
   build:
+    name: build / ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
