--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -3,11 +3,10 @@ on: [push, workflow_dispatch]
 
 jobs:
   style:
-    name: style (${{ matrix.os }}, ${{ matrix.path }})
-    runs-on: ${{ matrix.os }}
+    name: style in ${{ matrix.path }}
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        os: [macos-12, ubuntu-22.04]
         path: ['src/include', 'src/lib']
     steps:
       - uses: actions/checkout@v4
