Autoformatter and autoformat checker combined.

--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - run: clang-format --dry-run -Werror src/include/*.hh src/lib/*.cc
+      - run: ./autoformat.bash check
