--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,13 +1,16 @@
-name: build
+name: tests
 on: [push, workflow_dispatch]
 
 jobs:
-  build:
-    name: build on ${{ matrix.os }}
+  tests:
+    name: tests on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-12, ubuntu-22.04, windows-2022]
     steps:
       - uses: actions/checkout@v4
-      - run: make -j
+      - shell: bash
+      - run: |
+        make -j
+        ./project examples/womens_premier_league_2024.txt
