--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,13 @@
-name: tests
+name: build
 on: [push, workflow_dispatch]
 
 jobs:
-  tests:
-    name: tests on ${{ matrix.os }}
+  build:
+    name: build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-12, ubuntu-22.04, windows-2022]
     steps:
       - uses: actions/checkout@v4
-      - shell: bash
-        run: |
-          make -j
-          ./project examples/womens_premier_league_2024.txt
+      - run: make -j
