--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -3,8 +3,8 @@ on: [push, workflow_dispatch]
 
 jobs:
   style:
-    name: style
+    name: C++ style
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - run: ./autoformat.bash check
+      - run: ./clang-formatter.bash check
