--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - run: ./clang-formatter.bash check
+      - run: ./clang-format.bash check
